<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/content_Description"
                android:scaleType="fitCenter"
                android:src="@drawable/kontakt_name" />

            <EditText
                android:id="@+id/kontakt_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/kontakt_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/content_Description"
                android:scaleType="fitCenter"
                android:src="@drawable/kontakt_mail" />

            <EditText
                android:id="@+id/kontakt_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/kontakt_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:contentDescription="@string/content_Description"
                android:scaleType="fitCenter"
                android:src="@drawable/kontakt_message" />

            <EditText
                android:id="@+id/kontakt_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/kontakt_message"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <Button
            android:id="@+id/kontakt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/kontakt_senden"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

</ScrollView>